--- a/.github/workflows/build-webrtc1.yml
+++ b/.github/workflows/build-webrtc1.yml
@@ -12,31 +12,43 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install system deps
-        run: |
-          sudo apt update
-          sudo apt install -y git curl python3 python3-pip \
-            openjdk-17-jdk build-essential lsb-release
+      # ---------------- Cache depot_tools ----------------
+      - name: Cache depot_tools
+        id: cache-depot
+        uses: actions/cache@v4
+        with:
+          path: ~/depot_tools
+          key: depot-tools-v1
 
       - name: Clone depot_tools
+        if: steps.cache-depot.outputs.cache-hit != 'true'
         run: |
           git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git $HOME/depot_tools
-          echo "$HOME/depot_tools" >> $GITHUB_PATH
 
-      - name: Fetch WebRTC
+      - name: Add depot_tools to PATH
+        run: echo "$HOME/depot_tools" >> $GITHUB_PATH
+
+      # ---------------- Cache WebRTC checkout ----------------
+      - name: Cache WebRTC source
+        id: cache-webrtc
+        uses: actions/cache@v4
+        with:
+          path: webrtc-checkout
+          key: webrtc-source-v1
+
+      - name: Fetch WebRTC (with hooks)
+        if: steps.cache-webrtc.outputs.cache-hit != 'true'
         run: |
           mkdir webrtc-checkout
           cd webrtc-checkout
-          fetch --nohooks webrtc
+          fetch webrtc
 
-      - name: Sync dependencies
+      - name: Install build deps
         run: |
           cd webrtc-checkout/src
           ./build/install-build-deps.sh --no-prompt
-          gclient sync
-          gclient runhooks
 
-      # ---------------- ARM64 ----------------
+      # ---------------- ARM64 build ----------------
       - name: Generate GN build (arm64)
         run: |
           cd webrtc-checkout/src
@@ -66,7 +78,7 @@ jobs:
             --build-dir out/android_arm64 \
             --output webrtc-arm64.aar
 
-      # ---------------- ARMv7 ----------------
+      # ---------------- ARMv7 build ----------------
       - name: Generate GN build (arm)
         run: |
           cd webrtc-checkout/src
